--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Protfolio   
+    </title>
+</head>
+<body>
+    <h1>Rahul Portfolio</h1>
+    <h2>I am a web developer</h2>
+    <hr/>
+    <a href="./public/movie-ranking.html">Movie Ranking Projects</a>
+    <img src="./assets/images/movie-ranking.png"height=200>
+    <hr/>
+    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
+    <img src="./assets/images/birthday-invite.png"height="200">
+    <hr/>
+    <a href="./public/contact.html">Contact ME</a>
+    <hr/>
+    
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
